- Added new column extension between file and original on the grid to allow sorting by filetypes (Nico919).
- Added INI option BeepWhenDone=false to beep and notify used when optimization is complete (Special).
- Added .GALLERY, .GALLERYCOLLECTION, .GALLERYITEM, .INK, .NBK, .NOTEBOOK and *.XNK file extensions to the ZIP tool chain (maadjordan).
- Better handling of obsolete .INI preferences.
- Fixed wrong percentage calculation for big files due to integer overflow (Dmitry, Juan).
- Fixed grid column sorting not working properly for certain types (Nico919).
- Updated libwebp to 0.4.3 RC1.
- Updated ImageMagick to 6.9.0.10.
- Some minor optimizations and code cleanup.



7.10 - 2015/02/20
- Added Matroska support with mkclean for .mkv, .mka, and .mks file extensions (SpanishDogg).
- Added XML (.xml, .fb2 .xsl, .xslt) support with Leanify.
- Added LUA (.lua .luac) support with Leanify.
- Allow concurrent executions of different FileOptimizer instances over different file sets.
- Added more PDF profiles, including without downsampling, 100 dpi, 200 dpi and 600 dpi (stratos chatzi).
- Added 250 dpi setting for PDF (Special).
- Added INI option ExcludeMask="" to specify paths (folder/files) that contain it as substring will be excluded (Tomasz W.).
- Exclusion list can now optionally contain more than one substrings if separated by semicolon (;).
- Added INI option ZIPRecurse=false prevent Leanify inside ZIP files.
- Added INI option XMLEnableLeanify=false enable Leanify on XML files.
- Added INI option LUAEnableLeanify=false enable Leanify on LUA files.
- Allow optimizing JPEG files when copy metadata is enabled by using new --keep-exif switch as well as inside ZIP files (Jaff).
- Added .DEB, and .IPK file extensions to the GZ tool chain (maadjordan).
- Added .FXG and .KML file extensions to the XML tool chain (maadjordan).
- Added .BAR, .CDR, .CDT, .CSL, .DES, .FXG .IPSW, .KMZ, and .SWC file extensions to the ZIP tool chain (maadjordan).